# GrossErrorEliminationBasedRANSAC

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  check.py  main.cc  run.sh
data/: CMakeLists.txt  data.cc  data.h
magsac/: CMakeLists.txt  magsac.cc  magsac.h  utils.h
model/: CMakeLists.txt  estimator.cc  estimator.h  homography.cc  homography.h
test/: CMakeLists.txt  a.py  main.cc
